--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,14 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "laravelcollective/html": "5.3.*",
+        //"laravelcollective/html": "5.3.*",
         "guzzlehttp/guzzle": "~5.3|~6.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "laravelcollective/html": "5.3.*",
+        //"laravelcollective/html": "5.3.*",
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "2.8.*|3.0.*"
     },
