--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,9 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*",
-        "guzzlehttp/guzzle": "~5.3|~6.0"        
+        "laravel/framework": "5.4.*",
+        "guzzlehttp/guzzle": "~5.3|~6.0",
+        "laravelcollective/html": "~5.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
