--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.4.*",
+        "laravel/framework": "5.4",
         "guzzlehttp/guzzle": "~5.3|~6.0",
         "laravelcollective/html": "~5.4"
     },
